--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.gaussic</groupId>
     <artifactId>springdemo-list</artifactId>
-    <packaging>war</packaging>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>../demo</module>
+    </modules>
     <name>springdemo-list Maven Webapp</name>
     <url>http://maven.apache.org</url>
 
@@ -54,6 +57,8 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.39</version>
         </dependency>
+
+
 
 
     </dependencies>
